# project

./: Cargo.toml  README.md  cookies-new.txt  cookies.txt  users.db
migrations/: 001_initial.sql
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs
templates/: base.html.tera  dashboard-simple.html.tera  dashboard.html.tera  deepseek.html.tera  index.html.tera  test-login.html.tera
templates/auth/: login-simple.html.tera  login.html.tera  profile.html.tera  register-simple.html.tera  register.html.tera
templates/components/: card.html.tera  footer.html.tera  header.html.tera
templates/layouts/: base.html.tera
