[package]
name = "rust-web-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.7"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
tera = "1.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bcrypt = "0.17.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
env_logger = "0.11.8"
futures-util = "0.3.31"